--- a/index.html
+++ b/index.html
@@ -50,16 +50,7 @@
     </div>
     </div>
     <script src="js/lib/knockout-3.4.2.min.js "></script>
-    <script src="./node_modules/requirejs/require.js"></script>
-    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.js "></script> -->
-    <!-- <script src="js/app.js "></script> -->
-    <script>
-        require(["js/VendingMachine"], function (machineModule) {
-            var machine = new machineModule.VendingMachine();
-            machine.size = machineModule.VendingMachineSize.medium;
-            ko.applyBindings(machine);
-        })
-    </script>
+    <script src="js/bundle.js "></script>
 </body>
 
 </html>
